plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.identitymodulith'
version = '0.0.1-SNAPSHOT'
description = 'identity-modulith'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()

    // OpenSAML (SAML 2.0 지원)을 위한 Shibboleth 저장소
    maven {
        url "https://build.shibboleth.net/maven/releases/"
    }
}

ext {
    set('springModulithVersion', "1.4.2")
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14"
    implementation "org.apache.commons:commons-lang3:3.18.0"
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Resilience4J (DB Retry / CircuitBreaker)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // ========== Keycloak SAML 2.0 ==========
    implementation 'org.springframework.security:spring-security-saml2-service-provider'

    // OpenSAML 의존성 (명시적 추가)
    implementation 'org.opensaml:opensaml-core:4.3.2'
    implementation 'org.opensaml:opensaml-saml-api:4.3.2'
    implementation 'org.opensaml:opensaml-saml-impl:4.3.2'

    // BouncyCastle (자체 서명 인증서 생성용)
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway (DB 마이그레이션)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Spring Modulith
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
